--- a/GrundlagenProgrammierung/Assembly-CSharp.csproj
+++ b/GrundlagenProgrammierung/Assembly-CSharp.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Assets\_Tag3\Rocket\Rocket_Simple.cs" />
     <Compile Include="Assets\_Tag3\Rocket\RocketControls.cs" />
     <Compile Include="Assets\_Tag3\Rocket\RocketFire.cs" />
+    <Compile Include="Assets\_Tag4\ClassCommunication\ColorGiver.cs" />
+    <Compile Include="Assets\_Tag4\ClassCommunication\ColorReceiver.cs" />
+    <Compile Include="Assets\_Tag4\ClassCommunication\MathUser.cs" />
+    <Compile Include="Assets\_Tag4\ClassCommunication\MyColor.cs" />
+    <Compile Include="Assets\_Tag4\ClassCommunication\MyMath.cs" />
+    <Compile Include="Assets\_Tag4\PositionColor.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/dozent/Documents/RameshBettge/Unity_GrundlagenProgrammierung/GrundlagenProgrammierung/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
