--- a/GrundlagenProgrammierung/Assembly-CSharp.csproj
+++ b/GrundlagenProgrammierung/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Mario\GoombaMovement.cs" />
     <Compile Include="Assets\Mario\MarioMovement.cs" />
     <Compile Include="Assets\Woche1\_Tag1\AssignRandomColor.cs" />
     <Compile Include="Assets\Woche1\_Tag1\DataTypes.cs" />
